# paction

./: README.md
data/sample/: overview_cna.csv  overview_cna_tree.csv  overview_pcr_clone_prediction.out  overview_pctr_clone_prediction.out  overview_pctr_clone_tree.dot  overview_pctr_clone_tree_prediction.tsv  overview_snv.csv  overview_snv_tree.csv
data/simulations/: Snakefile  config.yaml
src/: paction.py  reconciliation.py  simulation.py
src/cpp/: CMakeLists.txt  README.md
src/cpp/data/: test_cna.csv  test_cna2.csv  test_snv.csv
src/cpp/src/: character.cpp  character.h  charactermatrix.cpp  charactermatrix.h  enum.cpp  matrix.cpp  matrix.h  perfectphylograph.cpp  perfectphylograph.h  perfectphylomatrix.cpp  perfectphylomatrix.h  perfectphylotree.cpp  perfectphylotree.h  realmatrix.cpp  realmatrix.h  realtensor.cpp  realtensor.h  rootedcladisticancestrygraph.cpp  rootedcladisticancestrygraph.h  rootedcladisticenumeration.cpp  rootedcladisticenumeration.h  rootedcladisticnoisyancestrygraph.cpp  rootedcladisticnoisyancestrygraph.h  rootedcladisticnoisyenumeration.cpp  rootedcladisticnoisyenumeration.h  solution.cpp  solution.h  solutionset.cpp  solutionset.h  stategraph.cpp  stategraph.h  statetree.cpp  statetree.h  tensor.cpp  tensor.h  utils.cpp  utils.h
